--- a/chat_asesor_nomina_ia.html
+++ b/chat_asesor_nomina_ia.html
@@ -51,7 +51,7 @@
           method: "POST",
           headers: {
             "Content-Type": "application/json",
-            "Authorization": "Bearer TU_API_KEY_AQUI"
+            "Authorization": "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"
           },
           body: JSON.stringify({
             model: "gpt-4",
